--- a/report.tex
+++ b/report.tex
@@ -840,6 +840,38 @@ The code
 \subsection{Mang Ning}
 
 
+\appendix
+\section{Matlab codes}
+\subsection{Forward kinematics (LynxFK function)}
+\label{apendix:LynxFK}
+\verbatiminput{code/Part1/LynxFK.m}
+
+\subsection{Lynxmotion Workspace (workspace script)}
+\label{apendix:lynx_workspace}
+\verbatiminput{code/Part1/workspace_script.m}
+
+\subsection{Inverse kinematics test (ik script)}
+\label{apendix:lynx_ik_test}
+\verbatiminput{code/Part1/ik_script.m}
+
+\subsection{Inverse kinematics Parallel (ik script)}
+\label{apendix:parallel_ik_test}
+\verbatiminput{code/Part2/ik_script.m}
+
+\subsection{Workspace Parallel (ik script)}
+\label{apendix:parallel_workspace}
+\verbatiminput{code/Part2/workspace_script.m}
+
+\subsection{Pseudo-inverse Jacobian iterative method}
+\label{apendix:iterative_method}
+\verbatiminput{code/Part3/iterative_ik.m}
+%----------------------------------------------------------------------------------------
+%	BIBLIOGRAPHY
+%----------------------------------------------------------------------------------------
+
+\bibliographystyle{abbrvnat}
+\setcitestyle{authoryear,open={(},close={)}}
+\bibliography{biblio}
 
 
 
