--- a/report.tex
+++ b/report.tex
@@ -617,6 +617,8 @@ In figure \ref{fig:trajectories.cartesian} it can be observed that the obstacle 
 \end{center}
 \end{figure}
 
+The matlab code to simulate the described trajectories is in \ref{apendix:trajectories_script}. 
+
 \section{Part 2}
 \subsection{Inverse Kinematics}
 The manipilator of this part is a planar parallel robot which applied in surgery. The schematic diagram is shown in  figure \ref{fig:Parallel}. Concretely, The task is to find the solutions for $\psi_i$ and $\theta_i$ given the position coordiante of $C$ with respect to B and the rotation angle $a$ of the platform.
@@ -686,7 +688,7 @@ e_2 = -2x_{pp_i}r_A
 e_2 =x_{pp_i}^2+y_{pp_i}^2+r_A^2-L^2
 \end{equation}
 
-Hence, the euqation \ref{eq:parallel_algebra} can be written as
+Hence, the equation \ref{eq:parallel_algebra} can be written as
 \begin{equation}
 \label{eq:parallel_e}
 e_1sin\theta + e_2cos\theta + e_3 = 0
@@ -753,92 +755,10 @@ It is obvious from the picture that different angle $a$ correspond to various sh
 
 \section{Part 3}
 \subsection{Rodrigo Moreno Carrillo}
-According to \citep{buss2004introduction,barinka2002inverse} there are several methods to solve the inverse kinematics problem. For this part I decided to analyse other approach of solving this problem. The method I decided to evaluate was an iterative method using the pseudo inverse of the Jacobian matrix, similar to the one used in \citep{bhatti2014forward}.
-
-\begin{equation}
-x=f(\theta)
-\end{equation}
-
-The idea behind this method is that by performing a change in the joint space will bring as a consequence  change in the Cartesian space, this is described by forward kinematics. Therefore if the current configuration is known it is possible to compute the position of the end effector and if the desired position is very close to current position only a slight change in the configuration is needed to achieve that desired position.
-
-\begin{equation}
-\label{eq:part3.jacobian_relation}
-dx=J(\theta)d\theta
-\end{equation}
-
-The relationship between a small change in the joint space and the change in the Cartesian space is given  by (\ref{eq:part3.jacobian_relation}), where $J(\theta)$ is the Jacobian matrix that is defined as:
-
-\begin{equation}
-J(\theta)=  \left[
-\begin{array}{ccc}
-	\frac{\partial f_1}{\partial x_1} & \cdots & \frac{\partial f_1}{\partial x_n} \\
-	\vdots & \ddots & \vdots \\
-	\frac{\partial f_m}{\partial x_1} & \cdots & \frac{\partial f_m}{\partial x_n} \\
-\end{array}
-\right] 
-\end{equation}
-
-As a consequence, the inverse kinematics problem can be solved by knowing the difference between the current configuration and the configuration that arrives to de desired position, let name it $\Delta\theta$.
-
-\begin{equation}
-\theta_d=\theta+\Delta\theta
-\end{equation}
-
-If $\Delta\theta$ is considered to be small it can be computed by using inverse jacobian as expressed in (\ref{eq:part3.delta_relation}). Usually as the inverse of jacobian matrix not always exists, it is necessary to use the pseudo-inverse as denoted by \citep{penrose1955generalized}.
-
-\begin{equation}
-\label{eq:part3.delta_relation}
-\Delta\theta \approx  J(\theta)^{*}\Delta x
-\end{equation}
-
-where $J(\theta)^{*}$ is the pseudo-inverse and is computed using (\ref{eq:part3.pseudo_inverse}). The value of $\Delta x$ is the difference or the error between the current position and the desired position 
-
-\begin{equation}
-\label{eq:part3.pseudo_inverse}
-J(\theta)^{*} = J(\theta)^T(J(\theta)J(\theta)^T)^-1
-\end{equation}
-
-Furthermore, a step factor can be added to the equation and completely get the joint values that reduces error and get closer to the desired position.
-
-\begin{figure}[htbp] 
-\begin{center}
-\includegraphics[width=\textwidth]{images/Trajectory_Joint_p3_rodrigo}
-\caption{Update process of joint values over the iterations of using the iterative method}
-\label{fig:part3.joint_trajectory}
-\end{center}
-\end{figure}
-
-\begin{equation}
-\begin{aligned}
-\theta & = \theta + \alpha\Delta\theta \\
-& = \theta + \alpha J(\theta)^{*}e \\
-&=  \theta + \alpha J(\theta)^{*}(\theta_d - \theta)
-\end{aligned}
-\end{equation}
-
-Finally, the current joint values are updated using small steps, controlled by $\alpha$, until the error is zero or very close to zero, where can present oscillations  due to the value of $\alpha$ and the precision of the robot.
-
-\begin{figure}[htbp] 
-\begin{center}
-\includegraphics[width=\textwidth]{images/error_p3_rodrigo}
-\caption{Error is minimised as the position of end effector gets closer to the desired position}
-\label{fig:part3.joint_trajectory}
-\end{center}
-\end{figure}
-
-For the simulations it was considered a planar robot with two revolute joints, with links of length $a_1=20 [cm]$ and $a_2=10 [cm]$, the coefficient $\alpha = 0.1$. The jacobian of the robot is:
-
-\begin{equation}
-J(\theta) = \left[ \begin{array}{cc}
-	-a_1\sin(q_1) - a_2\sin(q_1+q_2) & -a_2\sin(q_1+q_2) \\
-        a_1\cos(q_1)+a_2\cos(q_1+q_2) & a_2\cos(q_1+q_2) \\
-\end{array} \right] 
-\end{equation}
-
-The code
+\input{rodrigo}
 
 \subsection{Mang Ning}
-
+\include{mang}
 
 \appendix
 \section{Matlab codes}
@@ -853,6 +773,10 @@ The code
 \subsection{Inverse kinematics test (ik script)}
 \label{apendix:lynx_ik_test}
 \verbatiminput{code/Part1/ik_script.m}
+
+\subsection{Trajectories task (trajectories script)}
+\label{apendix:trajectories_script}
+\verbatiminput{code/Part1/trajectories_script.m}
 
 \subsection{Inverse kinematics Parallel (ik script)}
 \label{apendix:parallel_ik_test}
